# Brunomnia

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.cli  Dockerfile.mock  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: cli-container.yml  desktop-release.yml  mock-server-container.yml
cli/: apiSpecSources.test.ts  apiSpecSources.ts  brunomnia.ts  configCode.test.ts  configCode.ts  externalVault.ts  physicalStore.test.ts  physicalStore.ts  pluginRuntime.test.ts  pluginRuntime.ts  scriptRuntime.test.ts  scriptRuntime.ts
docs/: CLI_CONTAINER.md  DESKTOP_UPDATES_AND_ACCESSIBILITY.md  FREE_FEATURE_POLICY.md  GIT_PROJECTS.md  GRAPHQL_AND_PREFERENCES.md  IDENTITY_GOVERNANCE.md  IMPORT_EXPORT.md  LOCAL_PROJECTS.md  MCP_AI_KONNECT.md  MIGRATION.md  MOCK_SERVERS.md  PARITY.md  PLUGINS.md  QA.md  QA_MILESTONE_10.md  QA_MILESTONE_100.md  QA_MILESTONE_101.md  QA_MILESTONE_102.md  QA_MILESTONE_103.md  QA_MILESTONE_104.md  QA_MILESTONE_105.md  QA_MILESTONE_106.md  QA_MILESTONE_107.md  QA_MILESTONE_108.md  QA_MILESTONE_109.md  QA_MILESTONE_11.md  QA_MILESTONE_110.md  QA_MILESTONE_111.md  QA_MILESTONE_112.md  QA_MILESTONE_113.md  QA_MILESTONE_114.md  QA_MILESTONE_115.md  QA_MILESTONE_116.md  QA_MILESTONE_117.md  QA_MILESTONE_118.md  QA_MILESTONE_119.md  QA_MILESTONE_12.md  QA_MILESTONE_120.md  QA_MILESTONE_121.md  QA_MILESTONE_122.md  (+257 more)
examples/: cli-script-file.txt  cli-template-file.json  cli-template-smoke-server.cjs  cli-template-workspace.json  cli-workspace.json  mock-deployment.json  orders-api.yaml
examples/imports/: calculator.wsdl  insomnia-v4.json  insomnia-v5.yaml  openapi-3.yaml  postman-2.0.json  postman-2.1.json  requests.sh  sample.har  swagger-2.json
mock-server/: Cargo.toml
mock-server/src/: main.rs
scripts/: cli-container-smoke.mjs  cli-physical-store-smoke.mjs  cli-runner-preview-smoke.mjs  cli-template-smoke.mjs  create-tauri-release-config.mjs  create-tauri-release-config.test.ts  desktop-artifact-manifest.mjs  desktop-artifact-manifest.test.ts  generate-plugin-vendored.mjs  mock-server-smoke.mjs  normalize-cli-bundle.mjs  updater-manifest.mjs  updater-manifest.test.ts  windows-sign.ps1
scripts/plugin-vendored/: package-lock.json  package.json
src/: App.emptyProject.test.tsx  App.environmentSecrets.test.tsx  App.pluginActions.test.tsx  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client_identity.rs  desktop_update.rs  external_credential_store.rs  external_url.rs  external_vault.rs  gguf.rs  git_credential_store.rs  git_provider.rs  grpc_client.rs  http_client.rs  identity_control_plane.rs  lib.rs  main.rs  mcp_http.rs  mcp_stdio.rs  mock_deployment.rs  mock_faker.rs  mock_server.rs  models.rs  oauth2_callback.rs  oauth2_webview_macos.rs  platform_keyring.rs  plugin.rs  project.rs  runtime_credentials.rs  secure_store.rs  specification_source.rs  streaming.rs  template_os.rs  vault_keychain.rs  workspace_physical_store.rs  workspace_store.rs
src-tauri/tests/fixtures/tls/: ca.cert.pem  client-rsa.cert.pem  client-rsa.key.encrypted-legacy.pem  client-rsa.key.pem  client.cert.pem  client.key.encrypted-legacy.pem  client.key.encrypted.pkcs8.pem  client.key.pem  client.key.pkcs8.pem  client.openssl-modern.p12.b64  server.cert.pem  server.key.pem
src/components/: AuthEditor.test.ts  AuthEditor.tsx  AutomationWorkbench.tsx  CertificateManager.tsx  CodeGenerationDialog.tsx  CollaborationRepositoryPanel.test.tsx  CollaborationRepositoryPanel.tsx  CommandPalette.tsx  CookieEditor.tsx  DesktopUpdateProvider.tsx  ExternalCredentialManager.test.tsx  ExternalCredentialManager.tsx  GitRepositoryOnboarding.test.ts  GitRepositoryOnboarding.tsx  GrpcEditor.tsx  Icon.tsx  IdentityGovernancePanel.test.tsx  IdentityGovernancePanel.tsx  IntegrationWorkbench.test.ts  IntegrationWorkbench.tsx  InterchangeDialogs.tsx  McpParameterField.tsx  McpServerRequestPanel.tsx  MockResponseExtractor.tsx  MultipartEditor.test.ts  MultipartEditor.tsx  OAuthAuthorizationDialog.tsx  PluginWorkbench.tsx  PreferencesWorkbench.accessibility.test.tsx  PreferencesWorkbench.shortcuts.test.tsx  PreferencesWorkbench.tsx  ProjectWorkbench.tsx  ProtocolEditors.tsx  ResponseBodyPreview.tsx  RunnerAssertionEvidence.test.tsx  RunnerAssertionEvidence.tsx  RunnerAttemptCard.test.tsx  RunnerAttemptCard.tsx  RunnerCliDialog.tsx  RunnerDataDialog.tsx  (+17 more)
src/data/: seed.ts
src/lib/: accessibilityContracts.test.ts  ai.gguf.test.ts  ai.test.ts  ai.ts  apiDesignSources.ts  auth.test.ts  auth.ts  bulkKeyValues.test.ts  bulkKeyValues.ts  calculatedHeaders.test.ts  calculatedHeaders.ts  certificates.test.ts  certificates.ts  cliExternalVault.test.ts  codegen.test.ts  codegen.ts  collaboration.test.ts  collaboration.ts  cookies.test.ts  cookies.ts  csvPreview.test.ts  csvPreview.ts  desktopUpdates.test.ts  desktopUpdates.ts  editorText.test.ts  editorText.ts  environmentJson.test.ts  environmentJson.ts  environmentSecrets.test.ts  environmentSecrets.ts  faker.ts  gguf.test.ts  gguf.ts  gitCommitPlan.test.ts  gitCommitPlan.ts  graphql.test.ts  graphql.ts  graphqlSchema.ts  grpc.test.ts  grpc.ts  (+137 more)
src/lib/interchange/: apply.ts  batch.test.ts  batch.ts  common.ts  curl.ts  exporters.test.ts  exporters.ts  har.ts  (+7 more)
