[package]
name = "brunomnia-mock-server"
version = "0.1.0"
description = "Account-free headless Brunomnia mock deployment runtime"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
