[package]
name = "brunomnia"
version = "0.1.0"
description = "A local-first, open API workbench"
authors = ["Brunomnia contributors"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "brunomnia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
http = "1"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde", "text-format"] }
prost-types = "0.14"
protox = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tonic = { version = "0.14", features = ["tls-native-roots", "transport"] }
tonic-reflection = "0.14"
url = "2"
