[package]
name = "brunomnia"
version = "0.1.0"
description = "A local-first, open API workbench"
authors = ["Brunomnia contributors"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "brunomnia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
digest_auth = "0.3.1"
encoding_rs = "0.8"
futures-util = "0.3"
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde", "text-format"] }
prost-types = "0.14"
protox = "0.9"
ntlmclient = "0.2.0"
p12-keystore = { version = "=0.1.5", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "multipart", "rustls-tls", "stream", "zstd"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["macos-proxy"] }
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tonic = { version = "0.14", features = ["tls-native-roots", "transport"] }
tonic-reflection = "0.14"
tower = { version = "0.5", features = ["util"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "=0.1.151", default-features = false, features = ["metal"] }
security-framework = "3.7.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "=0.1.151", default-features = false }
